--- a/_posts/2019-10-03-Welcome.MARKDOWN
+++ b/_posts/2019-10-03-Welcome.MARKDOWN
@@ -2,7 +2,9 @@
 layout: post
 title:  "Welcome!"
 date:   2019-10-03 10:33:43 +0800
-
+categories: others
 ---
 
-Welcome to my GitHub Page - View _posts 
+Welcome to my GitHub Page.
+
+This blog captures the projects and work that I perform in the area of data science and business analytics.
