--- a/_posts/2019-10-03-Welcome.MARKDOWN
+++ b/_posts/2019-10-03-Welcome.MARKDOWN
@@ -5,8 +5,8 @@ date:   2019-10-03 10:33:43 +0800
 categories: others
 ---
 
-Welcome to my GitHub Page.
+Welcome to my GitHub Page!
 
-Hi Everyone, I am Alvin Chia, a student pursuing a Master's degree in Enterprise Business Analytics at NUS.
+Hi Everyone, I am Alvin Chia.
 
-This blog documents the projects that I worked on in the areas of data science and business analytics.
+This blog documents the university projects that I worked on in the areas of data science and business analytics.
